/*
package Modelo.deprecated;

import Modelo.SistemaCartas.Activables.Joker.Joker;
import Modelo.SistemaCartas.Activables.SistemaDeEfecto.MultiplicacionMult;
import Modelo.Usuario.Mano;

public class Multiplicador extends Joker {

    // Constructor
    public Multiplicador(String nombre, String descripcion, int puntaje, int multiplicador) {

        super(nombre, descripcion, puntaje, multiplicador, "");

        this.efecto= new MultiplicacionMult();
    }

    @Override
    public void activar(Mano mano, int puntos, String contexto) {

    }

}

*/